Thu Jan 20 00:30:50 2005  Tim Janik  <timj@gtk.org>

	* bse/gslloader-bsewave.c: changed BseWave magic to "#BseWave1".

Thu Jan 13 21:35:38 2005  Tim Janik  <timj@gtk.org>

	* gsldatautils.[hc]: added gsl_data_make_fade_ramp() and
	gsl_data_clip_sample().

	* bseenums.[hc]: turn FILE_EMPTY into its own error code, added
	BSE_ERROR_DATA_UNMATCHED.

	* gsldatahandle.c (insert_handle_close): don't free xinfo pointer
	which we merely copied (but didn't deep-duplicate) upon open.

Wed Jan 12 02:08:21 2005  Tim Janik  <timj@gtk.org>

	* bsecore.idl: added part link structure and sequence.

	* bsepart.[hcp]*: added ::links-changed signal for asyncronous
	notification of part link changes. added procedurte to list all
	part links, sorted by tick stamps. fixed idle handler maintenance. 

	* bsetrack.c: properly notify parts about part link changes.
	added bse_track_list_part().

Sat Jan  8 04:44:14 2005  Tim Janik  <timj@gtk.org>

	* gslloader-pat.cc: removed.

Sat Jan  8 04:43:00 2005  Tim Janik  <timj@gtk.org>

	* bseloader-guspatch.cc: CVS copied from gslloader-pat.cc.

Fri Jan  7 02:53:05 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* gslloader-pat.cc: Reimplemented data_offset storing in a way that is
	both: fairly readable in the code, and based on the new style
	loader_data array that replaces the loader_offset field.

Fri Jan  7 02:01:11 2005  Tim Janik  <timj@gtk.org>

	* bsestorage.c: store Ogg/Vorbis data handles with increasing serialnos.

	* gsldatahandle-vorbis.[hc]: enforce specification of a serialno when 
	creating a store handle with gsl_vorbis1_handle_new().
	gsl_vorbis_make_serialno(): new function which generates unique
	serialnos (per program runtime).

	* gslvorbis-cutter.[hc]: allow overriding the output serialno (by 
	default the same as the input) with a specific serialno via
	gsl_vorbis_cutter_force_serialno().
	gsl_vorbis_cutter_unfilter_serialno(): removed.

Fri Jan  7 01:11:04 2005  Tim Janik  <timj@gtk.org>
